Preferences page fix for Dark Mode webextension #6

--- a/userContent.css
+++ b/userContent.css
@@ -891,6 +891,21 @@ body {
     color: var(--primary-accent-color) !important;
   }
 }
+/* Alters the preferences page for Dark Mode */
+
+/* IMPORTANT: change the Internal UUID */
+
+@-moz-document url-prefix("moz-extension://32b18bd1-4169-b649-b20a-ebafe1e7e549/")  {
+  /* Headers */
+
+  .comment {
+    color: var(--primary-accent-color) !important;
+  }
+
+  label {
+    color: var(--primary-light-color) !important;
+  }
+}
 /* Alters the preferences page */
 
 @-moz-document url-prefix("moz-extension://cd5adf97-491d-f44b-9ea2-d2417d781589/")  {
